tests/NormalTests/paczka1/fuzzy1/20449299.err
Error in line 4: B7SAX A972 66,5
Error in line 2: 9yAFwTDWvX A242 87,6
Error in line 14: PL8 A972 24,0
Error in line 22: ZdAuXxuXJE S123 50,3
Error in line 27: ZdAuXxuXJE A242 53,8
Error in line 34: B7SAX S737 78,0
